<resources>
    <string name="app_name">Finance Manag</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="card_title">card_title</string>
    <string name="card_price">card_price</string>
    <string name="transaction">Transaction</string>
    <string name="savings">Savings</string>
    <string name="powderedby">Powdered by AB Inc</string>
    <string name="save">Save</string>
    <string name="enter_transaction_category">Enter Transaction Category</string>
    <string name="enter_transaction_description">Enter Transaction Description</string>
    <string name="clear">Clear</string>
    <string name="inr">INR</string>
    <string name="enter_the_description">Enter the Description</string>
    <string name="enter_the_category">Enter the Category</string>
    <string name="select_a_date">Select a Date</string>
    <string name="enter_the_amount">Enter the Amount</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="add_new_trans">Add new Trans</string>
    <string name="hide_the_transaction">Hide the Transaction</string>
    <string name="show_the_transaction">Show the Transaction</string>
    <string name="acc">Dr/Cr</string>
    <string name="no_transactions">No Transactions. Click + button to Add Transaction</string>
    <string name="balance">Current Balance</string>
    <string name="click_tap_here_to_view">Click/Tap Here to View</string>
    <string name="summary">Summary</string>
    <string name="debit_count">Debit Count</string>
    <string name="credit_count">Credit Count</string>
    <string name="total_debit">Total Debit</string>
    <string name="total_credit">Total Credit</string>
    <string name="category_summary">Category Summary</string>
    <string name="no_data">No Data</string>
    <string name="amount">Amount</string>
    <string name="category_name">Category Name</string>
    <string name="no_category_summary_please_add_some_transaction">No Category Summary. Please Add some transaction</string>
    <string name="savings_summary">Savings Summary</string>
    <string name="savings_category_summary">Savings Category Summary</string>
    <string name="overall_balance">Overall Balance</string>
    <string name="savings_balance">Savings Balance</string>
    <string name="current_bal_savings_bal">(Current Bal + Savings Bal)</string>
    <string name="export">Export</string>
    <string name="set_currency_symbol">Set Currency Symbol</string>
    <string name="clear_all_data">Clear All Data</string>
    <string name="enter_your_currency_symbol">Enter your Currency Symbol</string>
</resources>