<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_trans_desc"
            style="@style/Widget.TextInputLayout"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:startIconDrawable="@drawable/ic_baseline_description_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_trans_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_description"
                android:inputType="textCapWords"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/til_trans_category"
            app:startIconDrawable="@drawable/ic_baseline_category_24">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_category"
                android:id="@+id/et_trans_category"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.TextInputLayout"
            android:id="@+id/til_trans_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:startIconDrawable="@drawable/ic_baseline_calendar_today_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_trans_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="@string/select_a_date"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_amount"
                style="@style/Widget.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_toEndOf="@+id/switch_acc_btn">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_the_amount"
                    android:inputType="numberDecimal"
                    android:textAlignment="textStart"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_acc_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                style="@style/Widget.App.Switch"
                android:textOn="@string/credit"
                android:text="@string/acc"
                android:checked="false"
                android:layout_margin="5dp"
                android:textOff="@string/debit" />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:layout_margin="5dp"
            style="?attr/materialButtonOutlinedStyle"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>