<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    card:cardCornerRadius="5dp"
    card:cardElevation="5dp"
    card:cardUseCompatPadding="true"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:id="@+id/accImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/acc" />
        <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/tv_cat_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_title"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:typeface="normal" />

        <TextView
            android:id="@+id/tv_cat_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/card_price"
            android:textAlignment="textEnd" />
        </LinearLayout>

</com.google.android.material.card.MaterialCardView>