<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.transaction.TransactionFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/show_toggle_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/show_the_transaction"
        app:icon="@drawable/ic_baseline_keyboard_arrow_down_24"
        app:iconGravity="textStart" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_trans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="70dp"
        android:contentDescription="@string/add_new_trans"
        android:backgroundTint="@color/purple_200"
        android:src="@drawable/ic_baseline_add_24" />

    <FrameLayout
        android:id="@+id/frame_l"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="70dp"
        android:visibility="invisible">
        <TextView
            android:visibility="invisible"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:id="@+id/tv_noTrans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_transactions"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trans_list"
            android:layout_width="match_parent"
            android:scrollbars="vertical"
            android:layout_height="match_parent"
            android:layout_margin="10dp" />
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>